[gd_scene load_steps=4 format=3 uid="uid://bfmruxwsqju7q"]

[ext_resource type="Theme" uid="uid://c70h03gycrl6c" path="res://resources/custom.tres" id="1_0p4rb"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_mqyvp"]
[ext_resource type="FontFile" uid="uid://bs8ecdwcjw04a" path="res://assets/fonts/IBMPlexMono-Bold.ttf" id="2_02pm3"]

[node name="GameOver" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_mqyvp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_0p4rb")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GameOverLabel" type="Label" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_02pm3")
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="StatsVBox" type="VBoxContainer" parent="Panel/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="FinalScoreHBox" type="HBoxContainer" parent="Panel/MarginContainer/MarginContainer/StatsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FinalScoreLabel" type="Label" parent="Panel/MarginContainer/MarginContainer/StatsVBox/FinalScoreHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "FINAL SCORE"
horizontal_alignment = 1

[node name="FinalScoreValue" type="RichTextLabel" parent="Panel/MarginContainer/MarginContainer/StatsVBox/FinalScoreHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("2_02pm3")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[right]999,999"
fit_content = true

[node name="RocksDestroyedHBox" type="HBoxContainer" parent="Panel/MarginContainer/MarginContainer/StatsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RocksDestroyedLabel" type="Label" parent="Panel/MarginContainer/MarginContainer/StatsVBox/RocksDestroyedHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "DESTROYED"
horizontal_alignment = 1

[node name="RocksDestroyedValue" type="RichTextLabel" parent="Panel/MarginContainer/MarginContainer/StatsVBox/RocksDestroyedHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_02pm3")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[right]123"
fit_content = true

[node name="ButtonsVBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
text = "NEW GAME"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../RestartButton")
mouse_default_cursor_shape = 2
text = "QUIT"
